--- a/src/components/layout/layout-main-page/main-books/books-plate/books-plate.scss
+++ b/src/components/layout/layout-main-page/main-books/books-plate/books-plate.scss
@@ -9,20 +9,21 @@
   max-width: 825px;
   padding: 24px 24px 24px 16px;
   background: #ffffff;
-  box-shadow: 0px 2px 4px rgba(191, 196, 201, 0.2), 0px 3px 4px rgba(191, 196, 201, 0.18),
-    0px 1px 5px rgba(191, 196, 201, 0.24);
+  box-shadow: 0px 2px 4px rgba(191, 196, 201, 0.2),
+    0px 3px 4px rgba(191, 196, 201, 0.18), 0px 1px 5px rgba(191, 196, 201, 0.24);
   border-radius: 12px;
 }
 .plate:hover {
-  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2), 0px 1px 10px rgba(249, 89, 8, 0.2);
+  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+    0px 1px 10px rgba(249, 89, 8, 0.2);
 }
 .plate-container {
   display: flex;
+  justify-content: space-between;
   gap: 16px;
 }
 .plate-img-container {
   height: 170px;
-  width: 120px;
   img {
     max-width: none;
     height: 100%;
@@ -32,7 +33,7 @@
 .plate-book-info {
   display: flex;
   flex-direction: column;
-  max-width: 649px;
+  width: 649px;
   gap: 24px;
   .book-info {
     display: flex;
@@ -79,19 +80,20 @@
   letter-spacing: 0.2px;
   text-transform: uppercase;
 }
-.plate-btn.item {
+.plate-btn.booking {
   background: #f9f9fa !important;
   border: 1px solid #bfc4c9;
   font-weight: 600;
   color: rgba(167, 167, 167, 1);
 }
-.plate-btn.item.alt {
+.plate-btn.delivery {
   background: #ffffff;
   border: 1px solid #bfc4c9;
   color: rgba(54, 54, 54, 1);
 }
 .plate-btn:active {
-  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2), 0px 1px 10px rgba(249, 89, 8, 0.2);
+  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+    0px 1px 10px rgba(249, 89, 8, 0.2);
 }
 .plate-btn:hover {
   box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
