--- a/src/components/layout/layout-main-page/main-books/books-squre/books-squre.scss
+++ b/src/components/layout/layout-main-page/main-books/books-squre/books-squre.scss
@@ -13,10 +13,12 @@
   height: 470px;
   border-radius: 10px;
   border: none;
-  box-shadow: inset 0 1px 5px rgba(191, 196, 201, 0.24), 0 3px 4px rgba(191, 196, 201, 0.18);
+  box-shadow: inset 0 1px 5px rgba(191, 196, 201, 0.24),
+    0 3px 4px rgba(191, 196, 201, 0.18);
 }
 .book-card:hover {
-  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2), 0px 1px 10px rgba(249, 89, 8, 0.2);
+  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+    0px 1px 10px rgba(249, 89, 8, 0.2);
 }
 
 .book-img-container {
@@ -57,6 +59,17 @@
 .subtitle {
   font-weight: 600;
   color: #363636;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -ms-line-clamp: 2;
+  -webkit-line-clamp: 3;
+  line-clamp: 2;
+  display: -webkit-box;
+  display: box;
+  word-wrap: break-word;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
 }
 
 .order {
@@ -72,19 +85,20 @@
   margin: 0 5px;
   text-transform: uppercase;
 }
-.order.item {
+.order.booking {
   background: #f9f9fa !important;
   border: 1px solid #bfc4c9;
   font-weight: 600;
   color: rgba(167, 167, 167, 1);
 }
-.order.item.alt {
+.order.delivery {
   background: #ffffff;
   border: 1px solid #bfc4c9;
   color: rgba(54, 54, 54, 1);
 }
 .order:active {
-  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2), 0px 1px 10px rgba(249, 89, 8, 0.2);
+  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+    0px 1px 10px rgba(249, 89, 8, 0.2);
 }
 .order:hover {
   box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
@@ -124,7 +138,8 @@
     width: 288px;
     border-radius: 10px;
     border: none;
-    box-shadow: inset 0 1px 5px rgba(191, 196, 201, 0.24), 0 3px 4px rgba(191, 196, 201, 0.18);
+    box-shadow: inset 0 1px 5px rgba(191, 196, 201, 0.24),
+      0 3px 4px rgba(191, 196, 201, 0.18);
   }
   .book-wraper {
     height: 100%;
