--- a/src/components/book/book-coments/book-coments.scss
+++ b/src/components/book/book-coments/book-coments.scss
@@ -11,13 +11,14 @@
     color: #363636;
     padding-bottom: 16px;
   }
-  h5::after {
-    content: '3';
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    color: #a7a7a7;
-    padding-left: 3px;
+  h5 {
+    span {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
+      color: #a7a7a7;
+      padding-left: 3px;
+    }
   }
   .comments-head {
     width: 350px;
@@ -32,7 +33,7 @@
   .show-comments-icon {
     width: 24px;
     height: 24px;
-    background: url('../../../icons/menu_icon.svg'), no-repeat;
+    background: url("../../../icons/menu_icon.svg"), no-repeat;
     cursor: pointer;
     transform: rotate(0deg);
     margin-bottom: 10px;
@@ -45,7 +46,6 @@
 .feed-back {
   display: flex;
   flex-direction: column;
-  min-height: 580px;
   gap: 42px;
 }
 .comment {
@@ -101,7 +101,8 @@
   margin-top: 22px;
 }
 .set-a-comment:active {
-  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2), 0px 1px 10px rgba(249, 89, 8, 0.2);
+  box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+    0px 1px 10px rgba(249, 89, 8, 0.2);
 }
 .set-a-comment:hover {
   box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
