--- a/src/components/layout/layout-main-page/loader/loader.scss
+++ b/src/components/layout/layout-main-page/loader/loader.scss
@@ -20,6 +20,9 @@
   top: 50%;
   left: 48%;
 }
+.loader-container.disabled {
+  display: none;
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
