--- a/src/components/layout/layout-main-page/menu/menu.scss
+++ b/src/components/layout/layout-main-page/menu/menu.scss
@@ -1,15 +1,10 @@
+$fz_response: calc(15.5px + (18 - 15.5) * ((100vw - 768px) / (1440 - 768)));
+
 article {
   height: 824px;
   width: 285px;
 
-  .menu-wraper {
-    width: 100%;
-  }
-  .category-burger {
-    display: none;
-  }
   .category {
-    width: 100%;
     margin: 0;
     font-weight: 700;
     font-size: 18px;
@@ -32,36 +27,21 @@ article {
   .navigation.disabled {
     display: none;
   }
-  .book-pedistal {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    a {
-      width: 100%;
-    }
-  }
+
   .active {
     font-weight: 700;
-    background: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     background-clip: text;
     font-size: 18px;
   }
   .active.item {
     border-bottom: 1px solid #f83600;
     padding-bottom: 8px;
-    font-size: calc(15px + (18 - 15) * ((100vw - 768px) / (1440 - 768)));
+    font-size: 18px;
   }
 
   .first-li {
-    border-bottom: none;
-    font-size: 17px;
     margin-left: 20px;
-    a {
-      border: none !important;
-    }
   }
 
   ul {
@@ -71,20 +51,10 @@ article {
     li {
       width: 90%;
       color: #363636;
-      margin-left: 24px;
+      margin-left: 22px;
       font-size: 16px;
       line-height: 24px;
       cursor: default;
-      a {
-        border: none;
-      }
-      span {
-        margin-left: 6px;
-        font-size: 14px;
-      }
-    }
-
-    li {
       a {
         border: none !important;
         &:hover {
@@ -102,16 +72,18 @@ article {
           }
         }
       }
+      span {
+        margin-left: 6px;
+        font-size: 14px;
+        color: #a7a7a7;
+        line-height: 24px;
+      }
     }
   }
 }
 
 .category-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 90%;
-
   .categoy-icon,
   .categoy-icon.toggle {
     width: 24px;
@@ -124,8 +96,13 @@ article {
   .categoy-icon.toggle {
     transform: rotate(180deg);
   }
+
+  a {
+    width: 100%;
+  }
 }
 .terms-deal-container {
+  width: 90%;
   margin: 42px 0;
   display: flex;
   flex-direction: column;
@@ -147,25 +124,33 @@ article {
 
 @media (min-width: 768px) and (max-width: 1440px) {
   article {
-    .active {
-      font-size: 17px;
-    }
     width: calc(150px + (279 - 150) * ((100vw - 768px) / (1440 - 768)));
     ul {
       li,
       .first-li {
-        font-size: calc(13px + (16 - 13) * ((100vw - 768px) / (1440 - 768)));
         margin-left: calc(10px + (24 - 10) * ((100vw - 768px) / (1440 - 768)));
+        font-size: calc(
+          12.5px + (16 - 12.5) * ((100vw - 768px) / (1440 - 768))
+        );
+        span {
+          font-size: calc(
+            12.5px + (16 - 12.5) * ((100vw - 768px) / (1440 - 768))
+          );
+        }
       }
     }
     .terms.item {
-      font-size: calc(15px + (18 - 15) * ((100vw - 768px) / (1440 - 768)));
+      font-size: $fz_response;
     }
   }
-  @media (max-width: 990px) {
+
+  @media (min-width: 769px) and (max-width: 990px) {
     article {
+      .active.item {
+        font-size: $fz_response;
+      }
       .category {
-        font-size: 15px;
+        font-size: $fz_response;
       }
     }
     .category-container {
@@ -175,17 +160,6 @@ article {
 }
 
 @media (max-width: 768px) {
-  article {
-    .category-burger {
-      display: block;
-      width: 80%;
-      margin: 0;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 28px;
-      color: #363636;
-    }
-  }
   article {
     display: none;
   }
