--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -1,4 +1,5 @@
 footer {
+  width: 100%;
   height: 56px;
   display: flex;
   justify-content: center;
@@ -17,6 +18,7 @@ footer {
 .secure {
   font-size: 16px;
   line-height: 24px;
+  letter-spacing: 0.1px;
   color: #363636;
 }
 
