--- a/src/components/layout/layout-main-page/main/main-page.scss
+++ b/src/components/layout/layout-main-page/main/main-page.scss
@@ -25,113 +25,9 @@ $bgcolor: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
   font-size: 32px;
   line-height: 40px;
 }
-.search-container {
-  display: flex;
-}
+
 input[type="search"] {
   padding-left: 45px;
-}
-
-.btn-autor {
-  width: 350px;
-}
-.btn-raiting {
-  width: 150px;
-  color: #a7a7a7;
-  display: flex;
-  align-items: center;
-  padding-left: 45px;
-}
-
-.seacrh-button {
-  display: none;
-  border-radius: 50px;
-  margin-right: 16px;
-  cursor: pointer;
-  background-color: #ffff;
-  border: none;
-  box-shadow: inset 0 1px 5px #bfc4c93d, 0 3px 4px #bfc4c92e,
-    0 2px 4px #bfc4c933;
-  text-align: start;
-  &:hover {
-    box-shadow: (0px 2px 5px rgba(54, 54, 54, 0.1));
-  }
-
-  &:focus {
-    border: none;
-    border-color: none;
-    box-shadow: inset 0 1px 10px #f9590833, 0 3px 4px #de7d0b33;
-    outline: none;
-  }
-}
-.search-input-container {
-  display: block;
-  position: relative;
-  display: inline-block;
-  width: 100%;
-
-  .cross-button {
-    background: transparent;
-    border: 0;
-    border-radius: 7px;
-    color: white;
-    padding: 7px;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    img {
-      cursor: pointer;
-      width: 16px;
-      height: 16px;
-      filter: invert(31%) sepia(89%) saturate(6026%) hue-rotate(13deg)
-        brightness(108%) contrast(102%);
-    }
-  }
-}
-.search-input-container.disabled {
-  display: none;
-}
-
-.search-input,
-.btn-autor,
-.btn-raiting {
-  height: 38px;
-  border-radius: 50px;
-  margin-right: 16px;
-  cursor: pointer;
-  background-color: #ffff;
-  border: none;
-  box-shadow: inset 0 1px 5px #bfc4c93d, 0 3px 4px #bfc4c92e,
-    0 2px 4px #bfc4c933;
-  text-align: start;
-  &:hover {
-    box-shadow: (0px 2px 5px rgba(54, 54, 54, 0.1));
-  }
-  &::placeholder {
-    color: #a7a7a7;
-    font-size: 14px;
-    line-height: 18px;
-  }
-
-  &:focus {
-    border: none;
-    border-color: none;
-    box-shadow: inset 0 1px 10px #f9590833, 0 3px 4px #de7d0b33;
-    outline: none;
-  }
-}
-.search-input {
-  width: 100%;
-  margin-right: 0;
-  &::placeholder {
-    color: #a7a7a7;
-    font-size: 12px;
-    line-height: 18px;
-  }
-}
-.search-input[type="text"] {
-  padding-left: 25px;
-  color: #f83600;
 }
 
 label {
@@ -149,70 +45,9 @@ label:before {
   bottom: 0;
   width: 20px;
 }
-.icon-autor:before {
-  filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
-    contrast(87%);
-
-  background: url("../../../../icons//glass_icon.svg") center / contain
-    no-repeat;
-}
-.icon-autor:focus-within {
-  fill: #f85f00;
-}
-.icon-rating:before {
-  filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
-    contrast(87%);
-  margin: 0 -5px;
-  background: url("../../../../icons/rating_icon.svg") center / contain
-    no-repeat;
-  transform: rotate(0deg);
-}
-.icon-rating.toggle:before {
-  transform: rotate(180deg);
-  transform: scaleY(-1);
-}
 
 .icon-crest {
   position: relative;
-}
-
-.view-of-books {
-  display: flex;
-}
-.btnSqure {
-  margin-right: 16px;
-}
-.btnSqure,
-.btnLine {
-  width: 38px;
-  height: 38px;
-  outline: none;
-  filter: drop-shadow(0px 2px 4px rgba(191, 196, 201, 0.2))
-    drop-shadow(0px 3px 4px rgba(191, 196, 201, 0.18))
-    drop-shadow(0px 1px 5px rgba(191, 196, 201, 0.24));
-  background-color: #ffffff;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-  color: #a7a7a7;
-
-  cursor: pointer;
-
-  &:hover {
-    color: #f85f00;
-    filter: drop-shadow(0px 2px 5px rgba(54, 54, 54, 0.1));
-  }
-  &:active {
-    filter: drop-shadow(0px 3px 4px rgba(222, 125, 11, 0.2))
-      drop-shadow(0px 1px 10px rgba(249, 89, 8, 0.2));
-  }
-}
-.btnSqure.active,
-.btnLine.active {
-  color: white;
-  background: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
 }
 
 .btn-squre,
@@ -224,25 +59,10 @@ label:before {
   .article-section {
     width: calc(540px + (825 - 540) * ((100vw - 768px) / (1440 - 768)));
   }
-  .btn-autor {
-    width: calc(274px + (350 - 274) * ((100vw - 768px) / (1440 - 768)));
-  }
 }
 @media (min-width: 320px) and (max-width: 768px) {
   .article-section {
     width: calc(288px + (640 - 288) * ((100vw - 320px) / (768 - 320)));
-  }
-  .btn-autor {
-    width: calc(62px + (274 - 62) * ((100vw - 320px) / (768 - 320)));
-  }
-  .btn-raiting {
-    width: calc(62px + (150 - 62) * ((100vw - 320px) / (768 - 320)));
-  }
-  .btn-autor,
-  .btn-raiting {
-    &::placeholder {
-      font-size: calc(9px + (14 - 9) * ((100vw - 320px) / (768 - 320)));
-    }
   }
 }
 
@@ -251,22 +71,9 @@ label:before {
     gap: 24px;
   }
 }
-@media (max-width: 720px) {
-  .btn-autor,
-  .btn-raiting {
-    color: transparent;
 
-    &::placeholder {
-      color: transparent;
-      opacity: 1;
-    }
-  }
-}
 @media (max-width: 320px) {
-  .icon-rating.disable,
-  .icon-autor.disable,
-  .seacrh-button.disable,
-  .view-of-books.disable {
+  .seacrh-button.disable {
     display: none;
   }
   .seacrh-button {
@@ -281,49 +88,11 @@ label:before {
         brightness(83%) contrast(87%);
     }
   }
-  .icon-autor {
-    display: none;
-  }
+
   input[type="text"] {
     padding-left: 0;
   }
-  .btn-raiting,
-  .btn-autor {
-    width: 32px !important;
-    height: 32px !important;
 
-    &::placeholder {
-      color: transparent;
-    }
-  }
-  .icon-rating:before {
-    left: 12px;
-    top: -5px;
-  }
-  .icon-autor:before {
-    left: 8px;
-    top: 0;
-    bottom: 0;
-    width: 16px;
-  }
-  .icon-autor:before {
-    background: url("../../../../icons//glass_320_icon.svg") center / contain
-      no-repeat;
-  }
-  .icon-rating:before {
-    margin: 0 -5px;
-    background: url("../../../../icons/rating_320_icon.svg") center / contain
-      no-repeat;
-  }
-  .icon-autor:focus-within::after {
-    background: none;
-  }
-  .btnSqure,
-  .btnLine {
-    height: 32px;
-    width: 32px;
-    overflow: auto;
-  }
   .btn-plate,
   .btn-squre {
     height: 45%;
@@ -331,5 +100,16 @@ label:before {
   }
   .navigation-wraper {
     gap: 16px;
+  }
+  label {
+    height: 32px;
+    &:before {
+      content: "";
+      position: absolute;
+      left: 12px;
+      top: 0;
+      bottom: 0;
+      width: 20px;
+    }
   }
 }
