--- a/src/components/layout/layout-main-page/main/mobile-search-view/moble-search-view.scss
+++ b/src/components/layout/layout-main-page/main/mobile-search-view/moble-search-view.scss
@@ -64,6 +64,5 @@
 }
 .search-input[type="text"] {
   padding-left: 25px;
-  // color: #f83600;
-  caret-color: #f83600;
+  caret-color: rgb(248, 54, 0);
 }
