--- a/src/components/layout/layout-main-page/main/search-field/search-field.scss
+++ b/src/components/layout/layout-main-page/main/search-field/search-field.scss
@@ -1,8 +1,12 @@
+@mixin element-color($color) {
+  background-image: url('data:image/svg+xml;utf8,<svg ...><g stroke="#{$color}" ... /></g></svg>');
+}
 .search-container {
   display: flex;
 }
 .btn-autor {
   width: 350px;
+  caret-color: rgb(248, 54, 0);
 }
 .btn-raiting {
   width: 150px;
@@ -31,16 +35,7 @@
     outline: none;
   }
 }
-.icon-autor:before {
-  filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
-    contrast(87%);
 
-  background: url("../../../../../icons//glass_icon.svg") center / contain
-    no-repeat;
-}
-.icon-autor:focus-within {
-  fill: #f85f00;
-}
 .icon-rating:before {
   filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
     contrast(87%);
@@ -56,12 +51,13 @@
 .icon-autor:before {
   filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
     contrast(87%);
-
-  background: url("../../../../../icons//glass_icon.svg") center / contain
+  background: url("../../../../../icons/glass_icon.svg") center / contain
     no-repeat;
 }
-.icon-autor:focus-within {
-  fill: #f85f00;
+.icon-autor:focus-within::before {
+  filter: none;
+  background: url("../../../../../icons/glass-focus.svg") center / contain
+    no-repeat;
 }
 
 @media (min-width: 768px) and (max-width: 1440px) {
@@ -114,8 +110,9 @@
   }
   .btn-raiting,
   .btn-autor {
-    width: 32px !important;
-    height: 32px !important;
+    width: 32px;
+    height: 32px;
+    padding-left: 0;
 
     &::placeholder {
       color: transparent;
