--- a/src/components/layout/layout-main-page/main/search-field/search-field.scss
+++ b/src/components/layout/layout-main-page/main/search-field/search-field.scss
@@ -1,41 +1,90 @@
-@mixin element-color($color) {
-  background-image: url('data:image/svg+xml;utf8,<svg ...><g stroke="#{$color}" ... /></g></svg>');
-}
 .search-container {
   display: flex;
+  width: 100%;
 }
-.btn-autor {
-  width: 350px;
-  caret-color: rgb(248, 54, 0);
-}
+.search-autor,
 .btn-raiting {
-  width: 150px;
+  background-color: #ffff;
   color: #a7a7a7;
+  box-shadow: inset 0 1px 5px #bfc4c93d, 0 3px 4px #bfc4c92e,
+    0 2px 4px #bfc4c933;
+  text-align: start;
+  border-radius: 50px;
+  padding-left: 45px;
+  border: none;
+  cursor: pointer;
+  height: 38px;
+  width: 100%;
+
+  &:focus {
+    caret-color: rgb(248, 54, 0);
+    border-color: none;
+    border: 1px solid #bfc4c9;
+
+    box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+      0px 1px 10px rgba(249, 89, 8, 0.2);
+    outline: none;
+  }
+  &::placeholder {
+    font-size: 14px;
+    line-height: 18px;
+    color: #a7a7a7;
+  }
+  &:hover {
+    box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
+  }
+}
+.search-input-container {
+  display: block;
+  position: relative;
+  display: inline-block;
+  width: 350px;
+
+  .cross-button {
+    background: transparent;
+    border: 0;
+    border-radius: 7px;
+    color: white;
+    padding: 7px;
+    position: absolute;
+    right: 5px;
+    top: 2px;
+    img {
+      cursor: pointer;
+      width: 16px;
+      height: 16px;
+      filter: invert(31%) sepia(89%) saturate(6026%) hue-rotate(13deg)
+        brightness(108%) contrast(102%);
+    }
+  }
+}
+.search-button {
+  background: transparent;
+  border: 0;
+  border-radius: 7px;
+  color: white;
+  padding: 7px;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  img {
+    cursor: pointer;
+    width: 16px;
+    height: 16px;
+  }
+}
+
+.btn-raiting {
+  color: #a7a7a7;
+  width: 150px;
   display: flex;
   align-items: center;
   padding-left: 45px;
 }
-.seacrh-button {
-  display: none;
-  border-radius: 50px;
-  margin-right: 16px;
-  cursor: pointer;
-  background-color: #ffff;
-  border: none;
-  box-shadow: inset 0 1px 5px #bfc4c93d, 0 3px 4px #bfc4c92e,
-    0 2px 4px #bfc4c933;
-  text-align: start;
-  &:hover {
-    box-shadow: (0px 2px 5px rgba(54, 54, 54, 0.1));
-  }
-  &:focus {
-    border: none;
-    border-color: none;
-    box-shadow: inset 0 1px 10px #f9590833, 0 3px 4px #de7d0b33;
-    outline: none;
-  }
-}
 
+.icon-rating {
+  margin-left: 17px;
+}
 .icon-rating:before {
   filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
     contrast(87%);
@@ -48,39 +97,21 @@
   transform: rotate(180deg);
   transform: scaleY(-1);
 }
-.icon-autor:before {
-  filter: invert(81%) sepia(5%) saturate(14%) hue-rotate(350deg) brightness(83%)
-    contrast(87%);
-  background: url("../../../../../icons/glass_icon.svg") center / contain
-    no-repeat;
-}
-.icon-autor:focus-within::before {
-  filter: none;
-  background: url("../../../../../icons/glass-focus.svg") center / contain
-    no-repeat;
-}
 
 @media (min-width: 768px) and (max-width: 1440px) {
-  .btn-autor {
+  .search-input-container {
     width: calc(274px + (350 - 274) * ((100vw - 768px) / (1440 - 768)));
   }
 }
 @media (min-width: 320px) and (max-width: 768px) {
-  .btn-autor {
-    width: calc(62px + (274 - 62) * ((100vw - 320px) / (768 - 320)));
+  .search-input-container {
+    width: calc(32px + (274 - 32) * ((100vw - 320px) / (768 - 320)));
   }
   .btn-raiting {
-    width: calc(62px + (150 - 62) * ((100vw - 320px) / (768 - 320)));
-  }
-  .btn-autor,
-  .btn-raiting {
-    &::placeholder {
-      font-size: calc(9px + (14 - 9) * ((100vw - 320px) / (768 - 320)));
-    }
+    width: calc(32px + (150 - 32) * ((100vw - 320px) / (768 - 320)));
   }
 }
 @media (max-width: 720px) {
-  .btn-autor,
   .btn-raiting {
     color: transparent;
 
@@ -92,9 +123,16 @@
 }
 @media (max-width: 320px) {
   .icon-rating.disable,
-  .icon-autor.disable,
   .seacrh-button.disable {
     display: none;
+  }
+  .search-input-container.show,
+  .search-autor.show {
+    color: #a7a7a7;
+    width: 100%;
+  }
+  .search-autor {
+    color: transparent;
   }
   .seacrh-button {
     display: block;
@@ -108,8 +146,12 @@
         brightness(83%) contrast(87%);
     }
   }
+  .search-button {
+    left: 1px;
+    top: 2px;
+  }
   .btn-raiting,
-  .btn-autor {
+  .search-autor {
     width: 32px;
     height: 32px;
     padding-left: 0;
@@ -130,26 +172,13 @@
     transform: rotate(180deg);
     transform: scaleY(-1);
   }
-  .icon-autor {
-    display: none;
-  }
-  .icon-autor:before {
-    left: 8px;
-    top: 0;
-    bottom: 0;
-    width: 16px;
-  }
-  .icon-autor:before {
-    background: url("../../../../../icons//glass_320_icon.svg") center / contain
-      no-repeat;
-  }
 
   .icon-rating:before {
     margin: 0 -5px;
     background: url("../../../../../icons/rating_320_icon.svg") center / contain
       no-repeat;
   }
-  .icon-autor:focus-within::after {
-    background: none;
+  .search-autor {
+    padding-left: 15px;
   }
 }
