--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -10,7 +10,7 @@
   z-index: 11;
 }
 .loader {
-  background: url("../../../../icons/spin.svg");
+  background: url("../../icons//spin.svg");
   background-position: center;
   background-size: cover;
   width: 69px;
