--- a/src/components/auth/auth-reg-styles.scss
+++ b/src/components/auth/auth-reg-styles.scss
@@ -110,6 +110,13 @@
     border: none;
     cursor: pointer;
     text-transform: uppercase;
+    &:active {
+      box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
+        0px 1px 10px rgba(249, 89, 8, 0.2);
+    }
+    &:hover {
+      box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
+    }
   }
   .next-move-question {
     font-size: 16px;
