--- a/src/components/auth/auth-reg-styles.scss
+++ b/src/components/auth/auth-reg-styles.scss
@@ -38,7 +38,7 @@
     line-height: 18px;
     background: #f9f9fa;
     border-radius: 4px;
-    width: 416px;
+    width: 100%;
     height: 56px;
     border: none;
     border-bottom: solid 1px #bfc4c9;
@@ -98,7 +98,7 @@
   gap: 16px;
   height: 92px;
   .reg-next-moveBtn {
-    width: 416px;
+    width: 100%;
     height: 52px;
     background: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
     border-radius: 30px;
@@ -122,6 +122,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #727272;
+    display: flex;
   }
   .logIn-link {
     font-weight: 600;
@@ -131,5 +132,19 @@
     text-transform: uppercase;
     color: #363636;
     padding-left: 16px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    div {
+      height: 24px;
+      width: 24px;
+    }
+  }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .register-form {
+    padding: calc(24px + (48 - 24) * ((100vw - 320px) / (768 - 320))),
+      calc(16px + (56 - 16) * ((100vw - 320px) / (768 - 320)));
+    width: calc(288px + (528 - 288) * ((100vw - 320px) / (768 - 320)));
   }
 }
