--- a/src/components/auth/registration-layout.scss
+++ b/src/components/auth/registration-layout.scss
@@ -1,6 +1,7 @@
 .auth-layout {
   background: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
   height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   .auth-container {
@@ -9,11 +10,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+
     gap: 46px;
   }
 }
 
 .auth-head {
+  width: 528px;
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
