--- a/src/components/auth/common-styles.scss
+++ b/src/components/auth/common-styles.scss
@@ -1,16 +1,3 @@
-.register-form {
-  width: 528px;
-  height: 492px;
-  background: #ffffff;
-  border-radius: 16px;
-  padding: 48px 56px;
-  .register-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    gap: 32px;
-  }
-}
 .register-steps {
   height: 56px;
   h2 {
@@ -109,85 +96,59 @@
     font-weight: 500;
   }
 }
-
+.restore-password {
+  color: #a7a7a7;
+  left: 12px;
+  bottom: 20px;
+  position: relative;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.2px;
+  .pass-error {
+    color: #a7a7a7;
+    bottom: 10px;
+    position: relative;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.2px;
+    a {
+      position: relative;
+      top: 20px;
+      right: 190px;
+      color: #363636;
+    }
+  }
+}
 .next-move-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 16px;
-  .reg-next-moveBtn {
-    width: 100%;
-    height: 52px;
-    background: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
-    border-radius: 30px;
-    color: #ffffff;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    text-align: center;
-    border: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    &:active {
-      box-shadow: 0px 3px 4px rgba(222, 125, 11, 0.2),
-        0px 1px 10px rgba(249, 89, 8, 0.2);
-    }
-    &:hover {
-      box-shadow: 0px 2px 5px rgba(54, 54, 54, 0.1);
-    }
-  }
-  .next-move-question {
-    font-size: 16px;
-    line-height: 24px;
-    color: #727272;
-    display: flex;
-  }
-  .logIn-link {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 18px;
-    letter-spacing: 0.2px;
-    text-transform: uppercase;
-    color: #363636;
-    padding-left: 16px;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    div {
-      height: 24px;
-      width: 24px;
-    }
-  }
-}
-@media (min-width: 320px) and (max-width: 768px) {
-  .register-form {
-    padding: calc(24px + (48 - 24) * ((100vw - 320px) / (768 - 320)))
-      calc(16px + (56 - 16) * ((100vw - 320px) / (768 - 320)));
-    width: calc(288px + (528 - 288) * ((100vw - 320px) / (768 - 320)));
-  }
 }
 
+@media (max-width: 405px) {
+  .restore-password {
+    .pass-error {
+      bottom: 10px;
+      position: relative;
+      a {
+        position: relative;
+        top: 5px;
+        right: 0;
+      }
+    }
+  }
+}
 @media (max-width: 320px) {
-  .register-form {
-    height: 458px;
-  }
-
   .reg-required-inputs-container {
-    gap: 42px;
+    gap: 32px;
   }
   .next-move-container {
     font-size: 15px;
-    .reg-next-moveBtn {
-      height: 40px;
-      font-size: 12px;
-    }
-    .next-move-question {
-      height: 48px;
-      flex-direction: column;
-    }
-    .logIn-link {
-      padding-left: 0;
-      font-size: 12px;
-    }
+  }
+  .restore-password {
+    bottom: 10px;
   }
 }
