--- a/src/components/auth/registration-layout.scss
+++ b/src/components/auth/registration-layout.scss
@@ -5,13 +5,12 @@
   display: flex;
   justify-content: center;
   .auth-container {
-    width: 600px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     gap: 46px;
   }
 }
